--- a/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
@@ -45,26 +45,24 @@
 
 <!--Pesquisar candiadatura-->
 
+
+
 <div class="row">
-    <div class="col-12 text-center align-content-center">
-        <h3>Pesquisar candidatura</h3>
+    <div class="col-md-7 mt-3">
+        <div class="text-center">
+            <h3>Pesquisar candidatura</h3>
+            <hr />
+
+            <form class="form-inline">
+                    <input type="search" class="form-control" placeholder="Número do candidato..." />
+                    <button class="btn btn-info"> <span class="fas fa-search"></span></button>
+            </form>
+        </div>
+    </div>
+
+    <div class="col-md-2 mt-3">
+        <h4 class="text-center">Notícias</h4>
         <hr />
-    </div>
-
-
-    <div class="col-12 text-center">
-        <form class="form-inline">
-            <div class="col-12">
-                <input type="search" class="form-control" placeholder="Número do candidato..." />
-                <button class="btn btn-info"> <span class="fas fa-search"></span></button>
-            </div>
-        </form>
-    </div>
-</div>
-
-
-<div class="row">
-    <div class="col-md-3 m-3">
         <div class="card shadow">
             <img class="card-img" src="~/Media/Imagens/xps-kLfkVa_4aXM-unsplash.jpg" />
             <div class="card-img-overlay text-white">
@@ -76,3 +74,4 @@
         </div>
     </div>
 </div>
+
