--- a/src/ProjectoAlexa.Web/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Shared/_LayoutAdmin.cshtml
@@ -170,14 +170,14 @@
 
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                               href="table-basic.html" aria-expanded="false">
+                               href="@Url.Action("Index","Candidatura")" aria-expanded="false">
                                 <i class="mdi mr-2 mdi-account-card-details"></i><span class="hide-menu">Candidaturas</span>
                             </a>
                         </li>
 
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                               href="pages-blank.html" aria-expanded="false">
+                               href="@Url.Action("Index","Exame")" aria-expanded="false">
                                 <i class="mdi mr-2 mdi-book-open-variant"></i><span class="hide-menu">Exames</span>
                             </a>
                         </li>
