--- a/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
@@ -45,22 +45,25 @@
 
 <!--Pesquisar candiadatura-->
 
+<div class="row">
+    <div class="col-md-12">
+            <h3 class="text-center">Pesquisar candidatura</h3>
+            <hr />
+    </div>
+
+    <div class="col-md-12 text-center">
+        <form class="form-inline">
+            <input type="search" class="form-control" placeholder="Número do candidato..." />
+            <button class="btn btn-info"> <span class="fas fa-search"></span></button>
+        </form>
+    </div>
+</div>
 
 
 <div class="row">
-    <div class="col-md-7 mt-3">
-        <div class="text-center">
-            <h3>Pesquisar candidatura</h3>
-            <hr />
 
-            <form class="form-inline">
-                    <input type="search" class="form-control" placeholder="Número do candidato..." />
-                    <button class="btn btn-info"> <span class="fas fa-search"></span></button>
-            </form>
-        </div>
-    </div>
 
-    <div class="col-md-2 mt-3">
+    <div class="col-md-3 mt-3">
         <h4 class="text-center">Notícias</h4>
         <hr />
         <div class="card shadow">
@@ -73,5 +76,6 @@
             </div>
         </div>
     </div>
+
 </div>
 
