Questionário e EstadoExame Alterados

--- a/src/ProjectoAlexa.Web/Views/QuestionarioAdmin/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/QuestionarioAdmin/Index.cshtml
@@ -19,7 +19,7 @@
                             <tr>
                                 <th class="border-top-0">#</th>
                                 <th class="border-top-0">Título</th>
-                                <th class="border-top-0">Area</th>
+                                <th class="border-top-0">Área</th>
                                 <th class="border-top-0">Total de Perguntas</th>
                                 <th class="border-top-0">Ações</th>
                             </tr>
