--- a/src/ProjectoAlexa.Web/Views/QuestionarioAdmin/Create.cshtml
+++ b/src/ProjectoAlexa.Web/Views/QuestionarioAdmin/Create.cshtml
@@ -14,7 +14,7 @@
                 @using (Html.BeginForm())
                 {
                     <form class="form-horizontal form-material">
-                        <input type="hidden" id="questionarioId" name="questionarioId" value="@ViewBag.QuestionarioId" />
+                        <input type="hidden" id="questionarioId" name="Id" value="@ViewBag.QuestionarioId" />
                         <input type="hidden" name="UsuarioId" value="@ViewBag.UsuarioId" />
                         <div class="form-group">
                             <h6 class="col-md-6 mb-0">Título</h6>
@@ -24,13 +24,23 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <h6 class="col-md-6 mb-0 mt-3">Área</h6>
-                            <div class="col-md-12 mt-2">
-                                @Html.DropDownList("AreaCandidaturaId", new SelectList(ViewBag.AreaCandidaturas, "Id", "AreaNome"), new { @class = "form-control border border-primary pl-0 form-control-line" })
+                        <div class="form-row">
+                            <div class="form-group col-md-10">
+                                <h6 class="col mb-0 mt-3">Área</h6>
+                                <div class="col-md-12 mt-2">
+                                    @Html.DropDownList("AreaCandidaturaId", new SelectList(ViewBag.AreaCandidaturas, "Id", "AreaNome"), new { @class = "form-control border border-primary pl-0 form-control-line" })
+                                </div>
+                            </div>
+
+                            <div class="form-group col">
+                                <h6 class="col mb-0 mt-3">Duração</h6>
+                                <div class="col-md-12 mt-2">
+                                    @Html.DropDownList("TempoExameId", new SelectList(ViewBag.Tempo, "Id", "Descricao"), new { @class = "form-control border border-primary pl-0 form-control-line" })
+                                </div>
                             </div>
                         </div>
-                        <h6 class="col-md-12 mb-0" id="totalPerguntas" data-conta="@ViewBag.TotalPerguntas">Perguntas Total - @ViewBag.TotalPerguntas</h6>
+
+                        <h6 class="col-md-6 mb-0" id="totalPerguntas" data-conta="@ViewBag.TotalPerguntas">Perguntas Total - @ViewBag.TotalPerguntas</h6>
                         <hr />
                         <div class="form-group">
                             <div class="col-md-12 p-2 border @(Model.Perguntas.Count > 0 ? "border-primary" : "")" id="AreaPergunta">
