--- a/src/ProjectoAlexa.Web/Views/Shared/_LayoutCandidato.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Shared/_LayoutCandidato.cshtml
@@ -48,7 +48,7 @@
     <div>
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="fixed-bottom">
             <p>&copy; @DateTime.Now.Year - Ministerio da Energia e Águas</p>
         </footer>
     </div>
