--- a/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
@@ -29,7 +29,7 @@
                     <a class="btn btn-outline-warning" href="#"><span class="fas fa-image"></span></a>
                 </div>
                 <div class="card-body text-left">
-                    <h6>Nº Candidatura: <span class="text-info">@Model.ultimaCandidaturaId</span> </h6>
+                    <h6>Nº Candidatura: <span class="text-info">@Model.UltimaCandidaturaId</span> </h6>
                     <hr />
                     <h6>Nome: @Model.NomeCompleto</h6>
                     <h6>Data de Nascimento: @Model.DataNascimento.ToShortDateString()</h6>
@@ -72,7 +72,7 @@
                             <h6>Estado da Candidatura:_ _ _ _ _ _</h6>
                         </div>
                         <div class="col-md-6">
-                            <h6>Primeira Fase:_ _ _ _ _ _</h6>
+                            <h6>Data de Publicação de Resultados:_ _ _ _ _ _</h6>
                         </div>
                         <div class="col-md-6">
                             <h6>Primeira Fase:_ _ _ _ _ _  </h6>
