Crud do Concurso

--- a/src/ProjectoAlexa.Web/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Shared/_LayoutAdmin.cshtml
@@ -170,6 +170,13 @@
 
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link"
+                               href="@Url.Action("Index","ConcursoAdmin")" aria-expanded="false">
+                                <i class="mdi mr-2 mdi-table"></i><span class="hide-menu">Concurso</span>
+                            </a>
+                        </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                href="@Url.Action("Index","Candidatura")" aria-expanded="false">
                                 <i class="mdi mr-2 mdi-account-card-details"></i><span class="hide-menu">Candidaturas</span>
                             </a>
