--- a/src/ProjectoAlexa.Web/Views/AreasAdmin/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/AreasAdmin/Index.cshtml
@@ -29,7 +29,7 @@
                                     <td>@area.Id</td>
                                     <td>@area.AreaNome</td>
                                     <td>
-                                        <a href="@Url.Action("Create", new { id = area.Id })" class="btn btn-info"><span class="fas fa-edit"></span> Editar</a>
+                                        <a href="@Url.Action("Editar", new { id = area.Id })" class="btn btn-info"><span class="fas fa-edit"></span> Editar</a>
                                         <a href="#" class="btn btn-danger"><span class="fas fa-trash-alt"></span> Eliminar</a>
                                     </td>
                                 </tr>
