--- a/src/ProjectoAlexa.Web/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Shared/_LayoutAdmin.cshtml
@@ -151,7 +151,7 @@
                         <!-- User Profile-->
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                               href="index.html" aria-expanded="false">
+                               href="@Url.Action("VisaoGeral","Admin")" aria-expanded="false">
                                 <i class="mdi mr-2 mdi-gauge"></i><span class="hide-menu">Visão Geral</span>
                             </a>
                         </li>
@@ -161,6 +161,14 @@
                                 <i class="mdi mr-2 mdi-account-check"></i><span class="hide-menu">Perfil</span>
                             </a>
                         </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link"
+                               href="@Url.Action("Index","Concurso")" aria-expanded="false">
+                                <i class="mdi mr-2 mdi-book"></i><span class="hide-menu">Concursos</span>
+                            </a>
+                        </li>
+
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link"
                                href="@Url.Action("Index","AreasAdmin")" aria-expanded="false">
