--- a/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
@@ -49,7 +49,7 @@
         <center>
             <div class="card">
 
-                @if (Model.DataUltimaCandidatura != DateTime.Now.Year)
+                @if (Model.DataUltimaCandidatura.Year != DateTime.Now.Year)
                 {
                     <h4>Ainda não efetuou a sua candidatura. <a href="@Url.Action("Adicionar","Candidatura")" class="text-warning">Candidatar-se »»</a></h4>
                 }
@@ -66,17 +66,14 @@
                 <div class="card-body text-left text-center">
                     <div class="row">
                         <div class="col-md-6">
-                            <h6>Data de Exame:_ _ _ _ _ _</h6>
+                            <h6>Data de Exame: <span class="text-success">@Model.DataUltimaCandidatura.ToShortDateString()</span></h6>
                         </div>
                         <div class="col-md-6">
-                            <h6>Estado da Candidatura:_ _ _ _ _ _</h6>
+                            <h6>Estado da Candidatura:@if (Model.DataUltimaCandidatura != null)
+                            { <b class="text-success"> Confirmada</b> }
+                            else { <b class="text-danger"> Não efetuada</b>}</h6>
                         </div>
-                        <div class="col-md-6">
-                            <h6>Primeira Fase:_ _ _ _ _ _</h6>
-                        </div>
-                        <div class="col-md-6">
-                            <h6>Primeira Fase:_ _ _ _ _ _  </h6>
-                        </div>
+
                     </div>
                 </div>
             </div>
