--- a/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
@@ -66,17 +66,17 @@
                 <div class="card-body text-left text-center">
                     <div class="row">
                         <div class="col-md-6">
-                            <h6>Data de Exame:_ _ _ _ _ _</h6>
+                            <h6>Data de Exame: <span class="text-success">@Model.DataExame.ToShortDateString()</span></h6>
                         </div>
                         <div class="col-md-6">
-                            <h6>Estado da Candidatura:_ _ _ _ _ _</h6>
+                            <h6>
+                                Estado da Candidatura:@if (Model.DataUltimaCandidatura != null)
+                                {<b class="text-success"> Confirmada</b> }
+                                else
+                                { <b class="text-danger"> Não efetuada</b>}
+                            </h6>
                         </div>
-                        <div class="col-md-6">
-                            <h6>Data de Publicação de Resultados:_ _ _ _ _ _</h6>
-                        </div>
-                        <div class="col-md-6">
-                            <h6>Primeira Fase:_ _ _ _ _ _  </h6>
-                        </div>
+
                     </div>
                 </div>
             </div>
