--- a/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
@@ -66,11 +66,17 @@
                 <div class="card-body text-left text-center">
                     <div class="row">
                         <div class="col-md-6">
-                            <h6>Data de Exame: <span class="text-success">@Model.DataExame.ToShortDateString()</span></h6>
+                            <h6>
+                                Data de Exame:
+                                @if (Model.DataExame.ToShortDateString() != "01/01/0001")
+                                {<span class="text-success">@Model.DataExame.ToShortDateString()</span>}
+                                else
+                                { <b class="text-danger">Sem data</b> }
+                            </h6>
                         </div>
                         <div class="col-md-6">
                             <h6>
-                                Estado da Candidatura:@if (Model.DataUltimaCandidatura != null)
+                                Estado da Candidatura:@if (Model.DataUltimaCandidatura.ToShortDateString() != "01/01/0001")
                                 {<b class="text-success"> Confirmada</b> }
                                 else
                                 { <b class="text-danger"> Não efetuada</b>}
