--- a/src/ProjectoAlexa.Web/Content/Site.css
+++ b/src/ProjectoAlexa.Web/Content/Site.css
@@ -19,3 +19,16 @@
     right: 30%;
 }
 
+div.centralizado {
+    height:2em;
+    position:relative;
+}
+
+div.centralizado form{
+    margin:0;
+    position:absolute;
+    top:50%;
+    left:60%;
+    margin-right:-50%;
+    transform: translate(-50%,-50%)
+} 
