update 28/03/2021 - 03:20 - Revisão em views e update no Layout admin

--- a/src/ProjectoAlexa.Web/Views/ConcursoAdmin/Create.cshtml
+++ b/src/ProjectoAlexa.Web/Views/ConcursoAdmin/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProjectoAlexa.Web.ViewModels.ConcursoViewModel
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Registrar concurso";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
