--- a/src/ProjectoAlexa.Web/Views/Exame/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Exame/Index.cshtml
@@ -5,3 +5,46 @@
 }
 
 
+<div class="row mt-4">
+    <!-- column -->
+    <div class="col-sm-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4 class="card-title">Lista de Exames</h4>
+                    </div>
+                    <div class="col-md-6">
+                        <select class="form-control">
+                            <option>Selecione o ano...</option>
+                            <option>2021</option>
+                            <option>2020</option>
+                        </select>
+                    </div>
+                </div>
+                
+                <h6 class="card-subtitle"><hr /></h6>
+                <div class="table-responsive">
+                    <table class="table user-table">
+                        <thead>
+                            <tr>
+                                <th class="border-top-0">#</th>
+                                <th class="border-top-0">Data de Inicio</th>
+                                <th class="border-top-0">Data de encerramento</th>
+                                <th class="border-top-0">Data de Exame</th>
+                                <th class="border-top-0">Data dos Resultados</th>
+                                <th class="border-top-0">Data de cadastro</th>
+                                <th class="border-top-0">Ações</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            
+
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
