--- a/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
 
             <div class="col-md-9 centralizado">
                 <form class="form-inline ml-5">
-                    <input type="search" class="form-control" placeholder="Número da candidatura..." />
+                    <input type="search" class="form-control" placeholder="Nº da candidatura..." />
                     <button class="btn btn-info"> <span class="fas fa-search"></span></button>
                 </form>
                <hr class="mt-5" />
