--- a/src/ProjectoAlexa.Web/Views/Admin/VisaoGeral.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Admin/VisaoGeral.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div class="">
-
+<div class="jumbotron bg-info">
+    <h2 class="text-center text-white"> >>Bem-Vindo a área administrativa<< </h2>
 </div>
 
