--- a/src/ProjectoAlexa.Web/Views/ConcursoAdmin/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/ConcursoAdmin/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<a href="@Url.Action("Create")" class="btn btn-info">Adicionar Nova</a>
+<a href="@Url.Action("Create")" class="btn btn-info">Registrar novo concurso</a>
 
 <div class="row mt-4">
     <!-- column -->
@@ -38,8 +38,7 @@
                                     <td>@concurso.DataResultados</td>
                                     <td>@concurso.DataCadastro</td>
                                     <td>
-                                        <a href="@Url.Action("Create", new { id = concurso.Id })" class="btn btn-info"><span class="fas fa-edit"></span> Editar</a>
-                                        <a href="#" class="btn btn-danger"><span class="fas fa-trash-alt"></span> Eliminar</a>
+
                                     </td>
                                 </tr>
                             }
