update - 02/04/2020 - Exibir questionário no exame

--- a/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@
             </div>
 
 
-            <div class="col-md-2">
+            <div class="col-md-2 rounded border">
                 <h4 class="text-center bg-info rounded text-white p-3">Notícias</h4>
                 <hr />
                 <div class="card shadow  mt-3">
