--- a/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
@@ -18,6 +18,9 @@
     }
 }
 
+
+
+
 <div class="row m-4">
     <div class="col-md-3">
         <center>
@@ -54,6 +57,8 @@
                     <h4>Ainda não efetuou a sua candidatura. <a href="@Url.Action("Adicionar","Candidatura")" class="text-warning">Candidatar-se »»</a></h4>
                 }
 
+                <h4>Hoje é o dia do exame...<a href="@Url.Action("FazerExame","Exame", new { IdCandidatura = Model.UltimaCandidaturaId})" class="text-warning">  Fazer o exame »»</a></h4>
+
             </div>
         </center>
 
@@ -89,3 +94,4 @@
         </center>
     </div>
 </div>
+
