--- a/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
@@ -12,15 +12,15 @@
         <div class="carousel-item active">
             <img src="~/Media/Imagens/pexels-frans-van-heerden-2699258.jpg" class="d-block w-100" alt="..." style="width:1300px; height:400px;">
             <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                <h5>Candidaturas abertas para o concurso público</h5>
+                <p>Faça já a sua inscrição!</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="~/Media/Imagens/matthew-henry-yETqkLnhsUI-unsplash.jpg" class="d-block w-100" alt="..." style="width:1300px; height:400px;">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h5>Candidaturas abertas para o concurso público</h5>
+                <p>Faça já a sua inscrição!</p>
             </div>
         </div>
         <div class="carousel-item">
